2002-12-14  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h, various others: updated header style in some files.

	* src/pj_geocent.c, src/pj_transform.c, src/pj_list.h, src/projects.h:
	added support for geocentric coordinates in pj_transform() api.

	* src/pj_utils.c: Fixed pj_get_def() to return info on prime meridian.

2002-12-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/cs2cs.c: added support for the -lm switch to report all
	prime meridians.

	* src/pj_init.c, pj_transform.c, pj_datum.c: added preliminary
	support for the +pm switch to set the prime meridian.

2002-12-01  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Applied fix for 7 parameter shifts in 
	pj_geocentric_from_wgs84() as per suggestion from Harald Lernbeiss in:

	http://bugzilla.remotesensing.org/show_bug.cgi?id=194

2002-11-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/cs2cs.c: cleanup memory at end to facility memory leak testing.

2002-07-29  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri: applied gradian related patches as per bug 184:

	   http://bugzilla.remotesensing.org/show_bug.cgi?id=184

2002-07-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri: added new ESRI translation file.  Includes EPSG values
	plus various ESRI extensions. 

2002-07-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*.c, src/*.h, src/makefile.vc: *Many* changes to support
	compiling all of the PROJ.4 source as C++ source.  Add /TP to CFLAGS
	in makefile.vc to test this on Windows.  projects.h, and proj_api.h 
	attempt to export all externally visible functions with C linkage but
	all code should now compile as C++.  Currently only tested with VC++ 6.

2002-06-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_pr_list.c, proj.def, proj_api.h: Added the pj_get_def()
	function to return an expanded definition from a projPJ handle, 
	including having the +init= section expanded.

2002-05-30  Frank Warmerdam  <warmerdam@pobox.com>
